# Projet-Furet

./: .gitignore  Changelog.md  README.md  a.py  furet.spec  launchPythonEnv.bat  launchPythonEnvWithInstall.bat  pyproject.toml
Database/57/: 57_2025_04_RAA.csv  57_2025_5_RAA.csv
database/38/: 38_2023_01_RAA.csv
database/57/: 57_2025_04_RAA.csv  57_2025_4_RAA.csv  57_2025_5_RAA.csv
database/config/: campaign.csv  decreeTopics.csv  departments.csv  documentType.csv  lastId.csv
database/prefectures/04/: 04_2025_4_RAA.csv  04_2025_5_RAA.csv
database/prefectures/38/: 38_2023_1_RAA.csv
database/prefectures/57/: 57_2025_4_RAA.csv
hook/: configGenerationExec.py
scripts/: install.bash  install.sh  setup.bash  setup.sh
src/furet/: __main__.py  configs.py  import_csv.py  settings.py
src/furet/app/: __init__.py  utils.py
src/furet/app/widgets/: checkableComboBox.py  decreeFilterWidget.py  elidedLabel.py  fileDialog.py  filePickerWidget.py  formWidget.py  iconWidget.py  importListWidget.py  multiComboBox.py  objectTableModel.py  objectTableWidget.py  optionalDateEdit.py  raaDetailsWidget.py  sectionHeaderWidget.py  selectAllComboBox.py  selectAllTextComboBox.py  singleComboBox.py  singlePathEdit.py  textSeparatorWidget.py  urlEdit.py
src/furet/app/widgets/forms/: aspasWidget.py  decreeWidget.py  raaWidget.py
src/furet/app/widgets/imports/: finishedImportsWidget.py  inProgressImportsWidget.py  pendingImportsWidget.py
src/furet/app/widgets/launcher/: updaterWidget.py
src/furet/app/widgets/models/: aspasInfoEdit.py  decreeEdit.py  raaEdit.py
src/furet/app/widgets/settings/: appConfigEdit.py  processingConfigEdit.py  repositoryConfigEdit.py
src/furet/app/windows/: ImportRaaWindow.py  aboutUsWindow.py  aboutWindow.py  campaignsEditWindow.py  decreeDetailsWindow.py  decreeTableWindow.py  importFileWindow.py  launcherWindow.py  parametersWindow.py  raaDetailsWindow.py  raaImportWindow.py  settingsWindow.py  windowManager.py
src/furet/crawler/: Crawler.py  GrandEst.py  Occitanie.py  PACA.py  PaysDeLaLoire.py  __init__.py  configCrawler.json  config_crawler.json  crawler.py  resultCrawler.json  spider.py
src/furet/crawler/regions/: aura.py  bourgognefranchecomte.py  bretagne.py  centrevaldeloire.py  cotedazur.py  grandest.py  hautsdefrance.py  normandie.py  nouvelleaquitaine.py  occitanie.py  paca.py  paysdelaloire.py
src/furet/db/: __init__.py
src/furet/migration/: __init__.py
src/furet/migration/migrations/: 2025-05-27_InitData.py
src/furet/models/: campaign.py  decree.py  department.py  raa.py
src/furet/processing/: README.md  Traitement.py  __init__.py  getCharacteristics.py  getKeyWords.py  getPdfText.py  ocr.py  processing.py  separation.py  utils.py
src/furet/repository/: __init__.py  campaigns.py  csvdata.py  csvdb.py  decrees.py  departments.py  docTypes.py  topics.py  utils.py
src/furet/settings/: __init__.py
src/furet/traitement/: README.md  Traitement.py  correspondance_nom_num_depart.py  getCharacteristics.py  getKeyWords.py  getPdfText.py  ocr.py  processing.py  separation.py  separation_avec_sommaire.py
src/furet/traitement/output/apres_mot_cle/RAA nominatif n° 70 du 7 mai 2025/: Arrete_2.txt
src/furet/types/: Decree.py  Department.py  base.py  dbclass.py  decree.py  department.py  processinngraa.py  raa.py
src/furet/ui/: __init__.py  fakedata.py
src/furet/ui/widgets/: DecreeFilterWidget.py  DecreeTableWidget.py  ObjectTableModel.py
src/furet/ui/windows/: DecreeTableWindow.py  MainWindow.py
src/furet/updater/: __init__.py
