[project]
name = "Furet"
version = "0.0.0-dev"
description = "Fouille Universelle de Recueils pour Entreposage et Traitement"
readme = "README.md"
authors = [
    {name = "Amadou SOW" },
    {name = "Corentin JEANNE" },
    {name = "Harold MARTIN" },
    {name = "Joris FELZINES" },
    {name = "Juliette PIERRE" },
    {name = "Justine STEPHAN" },
    {name = "Marine QUEMENER" },
    {name = "Thomas LEVRARD" },
]

license-files = ["LICEN[CS]E*"]

requires-python = ">=3.9, <3.13"
dependencies = [
    "pyside6>=6.9",
    "tomlkit>=0.13",
    "dateutils",
    "requests",
    "bs4",
    "ocrmypdf",
    "PyMuPDF",
    "spacy",
    "fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl",
    "PyInstaller",
]

[project.urls]
homepage = "https://github.com/Hexoplanete/Projet-Furet"
repository = "https://github.com/Hexoplanete/Projet-Furet"
documentation = "https://github.com/Hexoplanete/Projet-Furet/wiki"

[project.gui-scripts]
furet = "furet.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/furet"]

[tool.hatch.metadata]
allow-direct-references = true

